1999-10-21  Kenichi OKADA <okada@opaopa.org>

	* starttls.c: New file.
	* smtp.el (smtp-via-smtp): STARTTLS support.
	* SLIM-TIPS: New file.
	* starttls.c: Deleted. See SLIM-TIPS.
	* FLIM-ELS (flim-modules): Add `starttls'

1999-10-21  Daiki Ueno <ueno@ueda.info.waseda.ac.jp>

	* starttls.el: New file.
	* starttls.c: New file.

1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Update to delete
	insecure sequences at plain.
	* SLIM-VERION: Add code name.
	* mime-def.el (mime-library-product): Up.

1999-10-20  Shuhei KOBAYASHI <shuhei@aqua.ocn.ne.jp>

	* hmac-def.el (define-hmac-function): Update to delete
	insecure sequences.

1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* SLIM: Version 1.13.0 released.

1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* smtp.el (smtp-via-smtp): Fix typo.
	* hmac-md5.el: Add Author and Maintainer.

1999-10-20  Kenichi OKADA <okada@opaopa.org>

	* hmac-md5.el (hmac-md5): Specify the 4th arg to `md5'
	as `binary' if possible.

1999-10-19  Kenichi OKADA <okada@opaopa.org>

	* hmac-md5.el (hmac-md5): Fixed for XEmacs's md5.

1999-10-19  Kenichi OKADA <okada@opaopa.org>

	* md5.el: New file. (import from hmac package)
	* md5-el.el: New file. (import from hmac package)
	* md5-dl.el: New file. (import from hmac package)
	* sha1.el: New file. (import from hmac package)
	* sha1-el.el: New file. (import from hmac package)
	* sha1-dl.el: New file. (import from hmac package)
	* hmac-def.el: New file. (import from hmac package)
	* hmac-util.el: New file. (import from hmac package)
	* hmac-md5.el: New file. (import from hmac package)
	* hmac-sha1.el: New file. (import from hmac package)
	* FLIM-ELS (flim-modules): Add `md5 md5-el md5-dl sha1 sha1-el
	sha1-dl hmac-def hmac-util hmac-md5 hmac-sha1'.

1999-10-19  Kenichi OKADA <okada@opaopa.org>

	* SLIM-VERSION: New file.
	* sasl.el: Add keyword.

1999-10-19  Kenichi OKADA <okada@opaopa.org>

	* sasl.el: New file.
	* smtp.el (smtp-via-smtp): Use sasl.el for SASL.